--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.5.2",
+    "js-base64": "^2.1.9",
+    "lyric-parser": "^1.0.1",
     "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
