--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "better-scroll": "^1.7.2",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
-    "jsonp": "^0.2.1",
-    "vue": "^2.5.2",
+    "good-storage": "^1.0.1",
     "js-base64": "^2.1.9",
+    "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
+    "vue": "^2.5.2",
     "vue-lazyload": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
